--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "jquery": "^3.6.4",
