--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test:headless": "vue-cli-service test:e2e --headless",
+    "lint": "vue-cli-service lint",
+    "cypress": "npx cypress run --record --key 67ff054c-3e19-46db-887e-da3f3ccdc851"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -25,7 +27,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "cypress": "^9.7.0",
+    "cypress": "^12.14.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
