--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
