--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -20,15 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      
-    - name: Install bootstrap
-      run: npm i bootstrap@5.3.0
 
     - name: Start API server
-      run: npm run serve  # Substitua "serve" pelo comando de inicialização do servidor API no seu projeto
+      run: npm run serve
 
     - name: Wait for server to start
-      run: sleep 10  # Ajuste o tempo de espera conforme necessário para garantir que o servidor API esteja em execução
+      run: sleep 10
 
     - name: Run Cypress tests
-      run: npm run cy:run
+      run: npm run cypress
